--- a/css/about.css
+++ b/css/about.css
@@ -21,7 +21,7 @@ html, body {
     position: absolute;
     width: 100%;
     bottom: 8px;
-    font-size: 80px;
+    font-size: 5em;
     color: #4c4c4c;
     opacity: .9;
     font-weight: 900;
@@ -35,7 +35,8 @@ html, body {
     width: 100%;
     position: absolute;
     bottom: -5px;
-    clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+    -webkit-clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+            clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
 }
 
 
@@ -71,7 +72,7 @@ html, body {
 
 #communities h2 {
     display: block;
-    font-size: 35px;
+    font-size: 2.1875em;
     font-weight: 900;
     color: #4c4c4c;
     text-transform: uppercase;
@@ -127,7 +128,7 @@ html, body {
 .experience-content span {
     color: var(--primary);
     font-weight: bold;
-    font-size: 55px;
+    font-size: 3.4375em;
     height: auto;
     display: inline-block;
     float: left;
@@ -146,7 +147,7 @@ html, body {
 
 .experience-content h3 {
     position: relative;
-    font-size: 20px;
+    font-size: 1.25em;
     padding-top: 15px;
 }
 
@@ -204,10 +205,14 @@ html, body {
     margin: 0;
     padding-top: 35px;
     color: #f3f3f3;
-    font-size: 20px;
+    font-size: 1.25em;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding-left: 40px;
 }
 
@@ -238,7 +243,8 @@ html, body {
     width: 100%;
     position: absolute;
     bottom: -5px;
-    clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+    -webkit-clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
+            clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
 }
 
 @media screen and (max-width: 350px) {
@@ -280,7 +286,7 @@ html, body {
 
 .sales-topper h2 {
     display: block;
-    font-size: 35px;
+    font-size: 2.1875em;
     font-weight: 900;
     color: #4c4c4c;
     text-transform: uppercase;
@@ -302,7 +308,7 @@ html, body {
 .sales-contact {
     margin: 0;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 0.875em;
     padding-left: 20px;
     position: relative;
 }
@@ -323,7 +329,7 @@ html, body {
 @media screen and (max-width: 350px) {
 
     .sales-contact {
-        font-size: 12px;
+        font-size: 0.75em;
     }
 
 }
@@ -336,9 +342,16 @@ html, body {
     position: relative;
     height: auto;
     background: #f5f3f3;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .job-content {
@@ -347,7 +360,7 @@ html, body {
 
 .job-content h2 {
     display: block;
-    font-size: 35px;
+    font-size: 2.1875em;
     font-weight: 900;
     color: #4c4c4c;
     text-transform: uppercase;
@@ -416,7 +429,7 @@ html, body {
 @media screen and (max-width: 350px) {
 
     .job {
-        font-size: 13px;
+        font-size: 0.8125em;
     }
 
 }
@@ -463,9 +476,16 @@ html, body {
 
     #mission {
         height: 400px;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 
     #mission h2,
@@ -477,7 +497,7 @@ html, body {
     }
 
     #mission h2 {
-        font-size: 25px;
+        font-size: 1.5625em;
     }
 
     #mission p {
@@ -494,20 +514,34 @@ html, body {
     }
 
     .sales-people {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        justify-content: space-between;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
     }
 
     .store {
         text-align: center;
-        font-size: 25px;
+        font-size: 1.5625em;
         margin-bottom: 50px;
         position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        align-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -ms-flex-line-pack: center;
+            align-content: center;
     }
 
     .store:before {
@@ -532,12 +566,18 @@ html, body {
 
     .store2 {
         text-align: center;
-        font-size: 25px;
+        font-size: 1.5625em;
         margin-bottom: 50px;
         position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        align-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -ms-flex-line-pack: center;
+            align-content: center;
     }
 
     .store2:before {
@@ -567,11 +607,21 @@ html, body {
      
     .sales-card {
         width: auto;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         margin-bottom: 100px;
     }
 
@@ -579,7 +629,8 @@ html, body {
         width: 225px;
         height: 340px;
         float: left;
-        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
     }
     
     .people-content {
@@ -672,10 +723,19 @@ html, body {
     }
 
     .experience {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     .experience-content {
@@ -712,7 +772,7 @@ html, body {
         display: block;
         width: 100%;
         text-align: center;
-        font-size: 25px;
+        font-size: 1.5625em;
         margin-bottom: 40px;
         position: relative;
     }
@@ -758,10 +818,18 @@ html, body {
     }
 
     .south-store {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
         margin-bottom: 100px;
         margin-top: 100px;
     }
@@ -771,10 +839,18 @@ html, body {
     }
 
     .north-store {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
         width: 880px;
         margin: auto;
     }
@@ -793,7 +869,7 @@ html, body {
     }
 
     .sales-card h4 {
-        font-size: 14px;
+        font-size: 0.875em;
     }
 
 
@@ -803,10 +879,18 @@ html, body {
 
     .job-content {
         margin: auto;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
-        justify-content: center;
-        flex-wrap: wrap;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
         padding-top: 100px;
     }
 
