--- a/css/about.css
+++ b/css/about.css
@@ -526,6 +526,8 @@ html, body {
         -webkit-box-pack: justify;
             -ms-flex-pack: justify;
                 justify-content: space-between;
+        max-width: 620px;
+        margin: auto;
     }
 
     .store {
