--- a/css/about.css
+++ b/css/about.css
@@ -449,6 +449,10 @@ html, body {
     <---          LANDING           -->
     <--- -------------------------- -*/
 
+    #landing-page {
+        min-height: 600px;
+    }
+
     .landing-text h1:before,
     .landing-text h1:after {
         display: none;
