removed margin top on the services h3's

--- a/css/services.css
+++ b/css/services.css
@@ -463,6 +463,10 @@ html, body {
         margin-bottom: 0;
     }
 
+    .service-card h3 {
+        margin-top: 0;
+    }
+
     #service button {
         width: auto;
     }
