--- a/css/contact.css
+++ b/css/contact.css
@@ -3,7 +3,7 @@
 <--- -------------------------- -*/
 
 #landing-page {
-    min-height: 300px;
+    min-height: 400px;
     background:url("../images/Random\ 2.jpg");
     background-position: center center;
     background-repeat: no-repeat;
@@ -24,6 +24,10 @@
             justify-content: center;
 }
 
+.landing p {
+    display: none;
+}
+
 .landing-group {
     padding: 0;
     margin: auto;
@@ -32,12 +36,17 @@
 
 .landing-text h1 {
     padding-top: 0;
-    margin: 40px auto;
+    margin: 40px auto 40px 0;
     font-size: 30px;
     border-left: 5px solid var(--primary);
     text-align: right;
     box-sizing: border-box;
     width: 280px;
+}
+
+.landing-text h2 {
+    font-size: 16px;
+    padding: 0;
 }
 
 .clippy-desktop {
@@ -53,86 +62,10 @@
 <---            FORM            -->
 <--- -------------------------- -*/
 
-#form {
-    background: url("../images/landscape-horizontal.jpg");
-    background-size: cover;
-    position: relative;
-}
-
-.form-dark {
-    background: #31AECE;
-    opacity: .9;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-}
-
-.form-container {
-    max-width:400px;
-    width:100%;
-    margin:0 auto;
-    position:relative;
-}
-
-.form-topper h3 {
-    font-weight: 700;
-    font-size: 35px;
-    margin-bottom: 30px;
-    position: relative;
-    margin-top: 30px;
-    color: #414141;
-}
-
-.form-topper h3 span {
-    color: var(--primary);
-    display: block;
-}
-
-.form-topper h3:before {
-    content: '';
-    position: absolute;
-    background: var(--primary);
-    width: 50px;
-    height: 2px;
-    left: 150px;
-    top: 11px;
-}
-
-.form-topper h3:after {
-    content: '';
-    position: absolute;
-    background: var(--primary);
-    width: 30px;
-    height: 2px;
-    left: 150px;
-    top: 20px;
-}
-
-.contact-info h4 {
-    margin-bottom: 15px;
-    font-size: 20px;
-    position: relative;
-    color: #414141;
-}
-
-.contact-info h4:before {
-    content: '';
-    width: 230px;
-    height: 2px;
-    background: var(--primary);
-    position: absolute;
-    bottom: -5px;
-}
-
-.contact-info p {
-    margin: 0;
-    line-height: 1.5em;
-    font-size: 13px;
-}
-
-.phone-number {
-    margin-bottom: 10px !important;
-    padding-top: 10px;
+#contact {
+    height: auto;
+    padding-top: 0;
+    padding-bottom: 50px !important;
 }
 
 .contact-topper {
@@ -144,9 +77,15 @@
     color: #414141;
 }
 
+#contact h3 {
+    width: 100%;
+    margin-bottom: 25px;
+    margin-top: 0;
+}
+
 .contact-topper span {
     color: var(--primary);
-    display: block;
+    display: inline-block;
 }
 
 .contact-topper:before {
@@ -155,7 +94,7 @@
     background: var(--primary);
     width: 50px;
     height: 2px;
-    left: 170px;
+    left: 180px;
     top: 11px;
 }
 
@@ -165,39 +104,9 @@
     background: var(--primary);
     width: 30px;
     height: 2px;
-    left: 170px;
+    left: 180px;
     top: 20px;
 }
-
-.info {
-    width: 160px;
-    display: flex;
-    align-items: center;
-}
-
-.info-last {
-    width: 175px;
-}
-
-.contact-info i {
-    padding-right: 15px;
-    color: var(--primary)
-}
-
-.phone {
-    padding-right: 25px !important;
-}
-
-.info {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.phone-number {
-    display: inline-block;
-}
-
 
 /* Form */
 #valley-form {
@@ -258,6 +167,7 @@ form p{
     height:100px;
     max-width:100%;
     resize:none;
+    margin-bottom: 30px;
 }
 
 #contact button[type="submit"] {
@@ -266,16 +176,16 @@ form p{
     font-weight: 900;
     font-size: 16px;
     margin: 0;
-    background: #000;
-    color: #fff;
+    background: var(--primary);
+    color: #000;
 }
 
 #contact button::before {
-    border-color: #000;
+    border-color: var(--primary);
 }
 
 #contact button::after {
-    border-color: #000;
+    border-color: var(--primary);
 }
 
 #contact button[type="submit"]:hover {
@@ -304,9 +214,129 @@ form p{
  color:#888;
 }
 
-/* 
-                               Contact
-*/
+.form-h4 {
+    font-size: 25px;
+}
+
+.form-p {
+    margin-bottom: 100px;
+}
+
+/*-- -------------------------- -->
+<---           CARDS            -->
+<--- -------------------------- -*/
+
+#cards {
+    height: auto;
+    position: relative;
+}
+
+.card {
+    height: 250px;
+    max-width: 250px;
+    background: #f6f7f8;
+    margin: 40px auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: relative;
+}
+
+.top-border {
+    width: 98%;
+    height: 10px;
+    background: var(--primary);
+    position: relative;
+    z-index: 1000;
+}
+
+.card-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 100%;
+    border-top: 10px solid var(--primary);
+    position: absolute;
+    width: 90%;
+    top: -10px;
+}
+
+.card-content svg {
+    width: 150px;
+    height: auto;
+    margin-bottom: 30px;
+    position: absolute;
+}
+
+.card-line {
+    height: 2px;
+    width: 180px;
+    background: #414141;
+    margin: 15px auto;
+}
+
+.card-content h3,
+.card-content p,
+.card-line {
+    position: relative;
+    z-index: 5;
+}
+
+.number span {
+    font-size: 80px;
+}
+
+.number h3 {
+    text-transform: uppercase;
+}
+
+.card h3 {
+    color: var(--heading);
+    font-size: 25px;
+    text-align: center;
+    margin: 0;
+}
+
+.card p {
+    color: var(--p);
+    font-size: 14px;
+    text-align: center;
+    margin: 0;
+}
+
+.clip-bottom {
+    height: 300px;
+    background: #fff;
+    width: 100%;
+    -webkit-clip-path: polygon(0 90%, 0 100%, 100% 100%, 100% 90%, 50% 100%);
+            clip-path: polygon(0 90%, 0 100%, 100% 100%, 100% 90%, 50% 100%);
+    position: absolute;
+    bottom: 0;
+}
+
+/*-- -------------------------- -->
+<---          CONTACT           -->
+<--- -------------------------- -*/
 
 #contact-bottom {
     background: var(--primary);
@@ -382,80 +412,97 @@ form p{
         display: none;
     }
 
+    #landing {
+        position: relative;
+    }
+
+    .landing-group {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        height: 600px;
+    }
+
+    .landing-text {
+        margin-top: 25px;
+        text-align: left;
+    }
+
     .landing-text h1 {
-        font-size: 45px;
-        width: auto;
+        font-size: 55px;
+        width: 550px;
         padding: 0 20px;
+        margin: 0;
+    }
+
+    #landing-page p {
+        display: block;
+        color: #AAA;
+        opacity: .1;
+        font-size: 160px;
+        position: absolute;
+        bottom: 0px;
+        margin: -20px;
+        text-transform: uppercase;
+        font-weight: 900;
     }
 
     /*-- -------------------------- -->
     <---            FORM            -->
     <--- -------------------------- -*/
 
-    .form {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        margin: auto;
-        padding-bottom: 100px;
-    }
-
-    .phone-number {
-        width: 130px !important;
-    }
-
-    .contact-topper {
-        display: none;
-    }
-
-    .contact-info {
-        order: 2; 
-        width: 190px;
-    }
-
-    .contact-info p {
-        width: 150px;
-        margin-right: 0;
-        display: inline-block;
-    }
-
-    .contact-info i {
-        padding-right: 15px;
-        color: var(--primary)
-    }
-
-    .map {
-        padding-right: 27px !important;
-    }
-
-    .info {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .contact-info h4:first-child {
-        margin-top: 0;
-    }
-
-    .form h4:before {
-        width: 150px;
-    }
-
     #contact {
-        margin: 0;
-        width: 3000px;
         padding-bottom: 0;
+        padding-top: 100px;
+        height: auto;
+        margin: auto;
+        margin-bottom: 50px;
+        max-width: 100% !important;
+        min-width: 100% !important;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    #contact input[type="email"], #contact input[type="tel"], #contact input[type="text"], .half {
+        width: 48.5%;
+        display: inline-block;
+        margin-bottom: 20px;
+        height: 50px;
+        background: #f6f7f9;
+        border: none;
+    }
+
+    #contact textarea {
+        width: 98%;
+        margin-bottom: 30px;
+        height: 200px;
+        background: #f6f7f9;
+        border: none;
     }
 
     #contact-submit {
         height: 40px;
+        width: auto !important;
     }
 
-    /* 
-                               Contact
-    */
+    .form-submit {
+        text-align: right;
+    }
+
+    /*-- -------------------------- -->
+    <---           CARDS            -->
+    <--- -------------------------- -*/
+
+    .card {
+        max-width: 450px !important;
+    }
+
+    /*-- -------------------------- -->
+    <---          CONTACT           -->
+    <--- -------------------------- -*/
 
     #contact-bottom{
         height: 250px;
@@ -490,39 +537,82 @@ form p{
     <---          LANDING           -->
     <--- -------------------------- -*/
 
+    #landing {
+        position: relative;
+    }
+
     .landing-group {
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
-        height: 400px;
+        height: 600px;
     }
 
     .landing-text {
         margin-top: 25px;
+        text-align: left;
     }
 
     .landing-text h1 {
         font-size: 55px;
         width: 550px;
         padding: 0 20px;
+        margin: 0;
+    }
+
+    #landing-page p {
+        display: block;
+        color: #AAA;
+        opacity: .1;
+        font-size: 400px;
+        position: absolute;
+        bottom: -150px;
+        margin: 0;
+        text-transform: uppercase;
+        font-weight: 900;
     }
 
     /*-- -------------------------- -->
     <---            FORM            -->
     <--- -------------------------- -*/
 
-    #contact {
-        padding-bottom: 0;
+    #valley-form {
+        height: auto;
+        position: relative;
+        z-index: 50;
+        margin: auto;
     }
 
-    .form {
+    #contact {
+        padding-bottom: 0;
+        height: auto;
+        margin: auto;
+        margin-bottom: 50px;
+        max-width: 1100px !important;
+        min-width: 1100px !important;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        flex-wrap: wrap;
         align-items: center;
-        margin: auto;
-        width: 800px;
-        padding-bottom: 100px;
+        justify-content: space-around;
+    }
+
+    .contact-topper {
+        width: 98%;
+        margin-bottom: 40px;
+    }
+
+    #contact h3 {
+        width: 98%;
+    }
+
+    .contact-topper span {
+        display: inline-block;
+    }
+
+    .contact-topper:before,
+    .contact-topper:after {
+        left: 190px;
     }
 
     .form-topper {
@@ -532,10 +622,6 @@ form p{
 
     .phone-number {
         width: 130px !important;
-    }
-
-    .contact-topper {
-        display: none;
     }
 
     .contact-info {
@@ -572,14 +658,152 @@ form p{
         width: 150px;
     }
 
-    #contact {
-        margin: 0;
-        max-width: 550px;
-        min-width: 550px;
+    .form-submit {
+        text-align: right;
+    }
+
+    #contact input[type="email"], #contact input[type="tel"], #contact input[type="text"], .half {
+        width: 48%;
+        display: inline-block;
+        margin-bottom: 20px;
+        height: 50px;
+        background: #f6f7f9;
+        border: none;
+    }
+
+    #contact textarea {
+        width: 98%;
+        margin-bottom: 30px;
+        height: 200px;
+        background: #f6f7f9;
+        border: none;
     }
 
     #contact-submit {
         height: 40px;
+        width: 150px !important;
+        margin-top: 25px;
+    }
+
+    .form-h4 {
+        width: 750px;
+        font-size: 25px;
+        margin-top: 80px;
+        margin-bottom: 10px;
+    }
+
+    .form-p {
+        width: 550px;
+        margin-top: 0;
+        margin-bottom: 200px;
+    }
+
+    /*-- -------------------------- -->
+    <---           CARDS            -->
+    <--- -------------------------- -*/
+
+    #cards {
+        position: relative;
+        height: 300px;
+        background: #000;
+        display: flex;
+        justify-content: center;
+    }
+
+    .card {
+        width: 270px;
+        margin: 25px;;
+        height: 300px;
+    }
+
+    .card-content {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card-content button {
+        position: relative;
+        left: 15px;
+    }
+
+    .card-content button:before {
+        width: 93px;
+    }
+
+    .card-content button:hover {
+        cursor: pointer;
+    }
+
+    .card-content p {
+        margin: 0;
+    }
+
+    .card-container {
+        max-width: 1100px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -ms-flex-pack: distribute;
+            -webkit-box-pack: justify;
+                justify-content: space-between;
+        margin: auto;
+        position: absolute;
+        top: -100px;
+    }
+
+    .location-info h3 {
+        font-size: 25px;
+        position: relative;
+        z-index: 5;
+    }
+
+    .location-info p {
+        font-size: 18px;
+        position: relative;
+        z-index: 5;
+        margin-bottom: 50px;
+    }
+
+    .location-info svg {
+        position: absolute;
+        height: auto;
+        width: 200px;
+        opacity: .95;
+        top: 40px;
+    }
+
+    .card-line {
+        height: 2px;
+        width: 200px;
+        background: #414141;
+        margin: 15px auto;
+        position: relative;
+        z-index: 5;
+    }
+
+    .number span {
+        font-size: 110px;
+    }
+
+    .number h3 {
+        margin-bottom: 50px;
+        font-size: 25px;
+        text-transform: uppercase;
+    }
+
+    .clippy {
+        height: 100px;
+        width: 100%;
+        background: #000;
+        clip-path: polygon(50% 68%, 100% 0, 100% 96%, 0 100%, 0 0);
+        position: absolute;
+        bottom: 70px;
     }
 
     /*-- -------------------------- -->
