--- a/css/services.css
+++ b/css/services.css
@@ -101,6 +101,7 @@ html, body {
     margin-bottom: 90px;
     margin-top: 50px;
     position: relative;
+    max-width: 340px;
 }
 
 .service-card h3 {
@@ -264,7 +265,7 @@ html, body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin: 20px;
+    margin: 20px 0;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
 }
@@ -281,6 +282,12 @@ html, body {
 .icon-group h3 {
     text-align: center;
     margin-bottom: 0;
+}
+
+.clippy-sales {
+    position: absolute;
+    bottom: -2px;
+    width: 100%;
 }
 
 @media screen and (min-width: 600px) and (max-width: 1024px) {
